Refactor AnswerService with tests